argocd/manifests/argo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - argocd.cbc.com
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
