argocd/manifests/passwordapp-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: passwordapp-route
  namespace: passwordapp
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - passwordapp.cbc.com
  rules:
  - backendRefs:
    - name: passwordapp
      port: 80
