argocd/manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: passwordapp-allow-ingress-only
  namespace: passwordapp
spec:
  podSelector:
    matchLabels:
      app: passwordapp
  policyTypes:
  - Ingress 
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: envoy-gateway
